[project]
name = "comfyui_essentials_mb"
description = "Essential nodes. Fork from ComfyUI_essentials"
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = ["numba", "colour-science", "rembg", "pixeloe"]

[project.urls]
Repository = "https://github.com/MinorBoy/ComfyUI_essentials_mb"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mboy"
DisplayName = "ComfyUI_essentials_mb"
Icon = ""
